Fix border-collapse setting

--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,6 @@
 
 .table table {
-	border-collapse;
+	border-collapse: collapse;
 	border: 1px solid black;
 	border-spacing: 0;	
 	width: 94%;
